--- a/templates/createNew.html
+++ b/templates/createNew.html
@@ -3,7 +3,10 @@
   <div data-ng-controller="RequestPokemonController as muffins">
     Enter the type of Pokegachi: <input data-ng-model="pokemonName" type="text" placeholder="Pokemon" required autofocus/>
     <button data-ng-click="muffins.getPokemon(pokemonName)">Submit</button>
-    <div>{{muffins.pokemonObj.name}}</div>
+    <div>{{muffins.pokemonObj.name || muffins.notfound}}</div>
+    <div>
+      <img alt="le poof" data-ng-show="muffins.image" data-ng-src="{{muffins.image}}"/>
+    </div>
     <button data-ui-sref = "home" class = "btn">Retrieve Current Pokegachi</button> 
   </div>
 </div>
