--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 
 <div data-ui-view>
-  <div data-ng-controller="RequestPokemonController as cupcake">
+  <div data-ng-controller="RequestPokemonController as cupcake" class="container text-center">
     <div>{{cupcake.pokeApi.pokemonObj.name}}</div>
   </div>
 </div>
